Assign1/error.log

File: rand.hs
rand.hs:1:13: error: parse error on input `->'
  |
1 | rand = Long -> Float
  |             ^^
